--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@ code {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
+
+.search-container {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color: white;
+  z-index: 999;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 250px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.pointer {
+  cursor: pointer;
+}
